# comp371mac

./: .gitignore  CMakeLists.txt  Main.cpp  README.TXT  camera.cpp  light.cpp  material.cpp  model.cpp
Comp371/: Main.cpp  OBJloader.h  model.cpp
Comp371.xcodeproj/: project.pbxproj
Comp371.xcodeproj/xcshareddata/xcschemes/: Comp371.xcscheme
Comp371/headers/: model.h  shaderloader.h
Comp371/shaders/: fragment.shader  vertex.shader
headers/: OBJloader.h  camera.h  light.h  material.h  model.h  shaderloader.h
shaders/: fragment.shader  shadowfragment.shader  shadowvertex.shader  vertex.shader
